<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/rankText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/dummy_rank"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/dummy_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/scoreText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/dummy_score"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>