<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/leaderboardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="false"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/leaderboard" />

    </RelativeLayout>

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="5"
        android:gravity="center"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="60sp"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <TextView
        android:id="@+id/instructionsText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/subtitle"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <TextView
        android:id="@+id/categoryText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:text="@string/category"
        android:textSize="14sp"
        android:typeface="serif" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Spinner
            android:id="@+id/subCategorySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </RelativeLayout>

    <Button
        android:id="@+id/startButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="4"
        android:backgroundTint="#8A2020"
        android:text="@string/start"
        android:textSize="20sp"
        android:typeface="serif" />

</LinearLayout>