<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/congratsTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/congrats"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="3"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/initialsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:gravity="center_horizontal"
            android:inputType="textCapCharacters"
            android:letterSpacing="0.35"
            android:maxLength="3"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textCursorDrawable="@color/white"
            android:textSize="90sp"
            tools:ignore="SpeakableTextPresentCheck" />

    </RelativeLayout>

    <TextView
        android:id="@+id/enterTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:text="@string/enter_initials"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/replayButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_weight="1"
        android:text="@string/same_game"
        android:textStyle="bold"
        android:typeface="serif"/>

    <Button
        android:id="@+id/menuButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1.5"
        android:text="@string/main_menu"
        android:textStyle="bold"
        android:typeface="serif"/>

</LinearLayout>